CicleCI config update

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/node:latest-browsers
+    working_directory: /build
     steps:
       - run: echo "Attempting checkout."
       - checkout
