CicleCI config update

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/node:latest-browsers
-    working_directory: /build
+    working_directory: build
     steps:
       - run: echo "Attempting checkout."
       - checkout
@@ -14,7 +14,7 @@ jobs:
   deploy:
     docker:
       - image: circleci/node:latest-browsers
-    working_directory: /build
+    working_directory: build
     steps:
       - run: echo "Attempting deployment..."
       - run:
