--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - image: circleci/node:latest-browsers
     steps:
       - run: echo "Attempting deployment..."
-      - run: npm install -g firebase-tools
+      - run: sudo npm install -g firebase-tools
       - run:
              name: Deploy Master to Firebase
              command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
