--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,7 @@ jobs:
       - run: sudo npm install -g firebase-tools
       - persist_to_workspace:
         root: .
-        paths:
-          - .
+        paths: - .
       - run:
              name: Deploy Master to Firebase
              command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
