--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,9 @@ jobs:
       - run: echo "Attempting deployment..."
       - run: sudo npm install -g firebase-tools
       - persist_to_workspace:
-        root: .
+          root: .
+          paths:
+            - .
       - run:
              name: Deploy Master to Firebase
              command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
