--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       - run: sudo npm install firebase-tools
       - run:
              name: Deploy Master to Firebase
-             command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
+             command: firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
 workflows:
   version: 2
   build_and_deploy:
