--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "firebase": "^7.7.0",
     "fs-extra": "3.0.1",
     "history": "3.2.1",
     "html-webpack-plugin": "2.29.0",
